--- a/spoo.plist
+++ b/spoo.plist
@@ -12,7 +12,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>https://psv4.userapi.com/c856420/u483768571/docs/d9/e3cffd2b2b6c/my2.ipa?extra=zZVDUnIX3sU1gZYs4xQRD99sW7xoTVh4J_XKZM987UI8kGybhVCPqOZyfERtQ0BhxU9wI5Hkq5PghXFvuO1H3BT92jvYAYwv4ELf-8oxahOTJnUOafbCSmKIlr57HlzkqNPmIkgBslFtTdPoAMXo&dl=1</string>
+<string>https://psv4.userapi.com/c856420/u483768571/docs/d9/e3cffd2b2b6c/my2.ipa</string>
 </dict>
 </array>
 <key>metadata</key>
