--- a/spoo.plist
+++ b/spoo.plist
@@ -20,13 +20,13 @@
 <key>bundle-identifier</key>
 <string>com.spotify.client</string>
 <key>bundle-version</key>
-<string>0.0.0</string>
+<string>8.5.7</string>
 <key>kind</key>
 <string>software</string>
 <key>subtitle</key>
 <string>下载</string>
 <key>title</key>
-<string>Spotify Fix</string>
+<string>Spotify</string>
 </dict>
 </dict>
 </array>
