--- a/spoo.plist
+++ b/spoo.plist
@@ -1,34 +1,33 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>items</key>
-<array>
-<dict>
-<key>assets</key>
-<array>
-<dict>
-<key>kind</key>
-<string>software-package</string>
-<key>url</key>
-<string>https://psv4.userapi.com/c856220/u483768571/docs/d17/26a4edcf8e37/1.ipa</string>
-</dict>
-</array>
-<key>metadata</key>
-<dict>
-<key>bundle-identifier</key>
-<string>com.spotify.client</string>
-<key>bundle-version</key>
-<string>8.5.7</string>
-<key>kind</key>
-<string>software</string>
-<key>subtitle</key>
-<string>下载</string>
-<key>title</key>
-<string>Spotify</string>
-</dict>
-</dict>
-</array>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>https://cdn.appvalley.vip/appValley-ipa/1768.ipa</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.spotify.client</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>bundle-version</key>
+				<string>8.5.7</string>
+				<key>subtitle</key>
+				<string>下载</string>
+				<key>title</key>
+				<string>Spotify</string>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
